# dawproject-rs

./: Cargo.toml  LICENSE  README.md
src/: application.rs  arrangement.rs  bool_parameter.rs  channel.rs  daw_project.rs  enum_parameter.rs  expression_type.rs  file_reference.rs  integer_parameter.rs  interpolation.rs  lane.rs  lib.rs  meta_data.rs  mixer_role.rs  parameter.rs  project.rs  real_parameter.rs  scene.rs  send.rs  send_type.rs  time_signature_parameter.rs  track.rs  transport.rs  unit.rs  utility.rs
src/api/: application.rs  arrangement.rs  bool_parameter.rs  channel.rs  content_type.rs  daw_project.rs  enum_parameter.rs  expression_type.rs  file_reference.rs  integer_parameter.rs  interpolation.rs  lane.rs  meta_data.rs  mod.rs  parameter.rs  project.rs  real_parameter.rs  scene.rs  send.rs  send_type.rs  time_signature_parameter.rs  track.rs  transport.rs  utility.rs
src/api/device_mods/: au_plugin.rs  builtin_device.rs  clap_plugin.rs  compressor.rs  device.rs  device_role.rs  eq_band.rs  eq_band_type.rs  equalizer.rs  limiter.rs  mod.rs  noise_gate.rs  (+3 more)
src/device_mods/: au_plugin.rs  builtin_device.rs  clap_plugin.rs  compressor.rs  device.rs  eq_band.rs  eq_band_type.rs  equalizer.rs  limiter.rs  noise_gate.rs  plugin.rs  vst2_plugin.rs  vst3_plugin.rs
src/timeline_mods/: audio.rs  automation_target.rs  bool_point.rs  clip.rs  clip_slot.rs  clips.rs  enum_point.rs  integer_point.rs  lanes.rs  marker.rs  markers.rs  media_file.rs  note.rs  notes.rs  point.rs  points.rs  real_point.rs  time_signature_point.rs  timeline.rs  video.rs  warp.rs  warps.rs
(+24 files in other folders)
